# legal-contract-auditor

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  contracts.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: app.py
