[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-contract-auditor"
version = "1.0.0"
description = "Reinforcement Learning Environment for Automated Contract Compliance Review"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name="LegalContractAuditor Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
    "python-multipart",
    "pyyaml",
    "openenv-core",
    "huggingface_hub"
]

[project.scripts]
server = "server.app:main"

